# automation-mitigation

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: hasher.rs  lib.rs
nonce/: Cargo.toml  lib.wasm
nonce/src/: lib.rs
pow/: Cargo.toml  README.md
pow/src/: chains.rs  generator.rs  hasher.rs  hex.rs  lib.rs  verifier.rs
wasm/: Cargo.toml  lib-high-cpu.wasm  lib-high-cpu.wasm.br  lib-high-mem.wasm  lib-high-mem.wasm.br  lib-high.wasm  lib-high.wasm.br  lib-min.mjs  lib-min.mjs.br  lib.mjs  lib.mjs.br  lib.wasm  lib.wasm.br  root.wasm  rust-toolchain.toml  test.html
wasm/src/: lib.rs
