[workspace]
members = [
    "pow",
    "wasm",
    "server"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MPL-2"
authors = ["Jerome David <programingjd@gmail.com>"]
repository = "https://github.com/id-entity-org/automation-mitigation"

[workspace.dependencies.blake2]
version = "0.10"
default-features = false
features = []

[workspace.dependencies.rs_merkle]
version = "1.5"
default-features = false
features = []

[workspace.dependencies.hkdf]
version = "0.12"
default-features = false
features = []

[profile.dev]
opt-level = 3
lto = "fat"
debug = true
debug-assertions = true
overflow-checks = true

[profile.test]
inherits = "dev"