[workspace]
members = [
    "pow",
    "wasm",
    "server"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MPL-2"
authors = ["Jerome David <programingjd@gmail.com>"]
repository = "https://github.com/id-entity-org/automation-mitigation"

[workspace.dependencies.keccak-const]
git = "https://github.com/programingjd/keccak-const.git"
rev = "95803db"
#version = "0.2"
default-features = false
features = []

[workspace.dependencies.tiny-keccak]
version = "2.0"
default-features = false
features = ["cshake", "shake"]

[workspace.dependencies.sha3]
version = "0.10"
default-features = true

[workspace.dependencies.rs_merkle]
git = "https://github.com/programingjd/rs-merkle.git"
rev = "fbe8c1f"
#version = "1.5"
default-features = false
features = []

[profile.dev]
opt-level = 3
lto = "fat"
debug = true
debug-assertions = true
overflow-checks = true

[profile.test]
inherits = "dev"