[package]
name = "automation-mitigation-pow"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies.core]
path = "../core"
package = "automation-mitigation-core"

[dependencies.blake2]
workspace = true

[dependencies.rs_merkle]
workspace = true

[dependencies.hkdf]
workspace = true

[features]
default = ["generate", "verify"]
generate = []
verify = []

