[package]
name = "automation-mitigation-pow"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies.keccak-const]
workspace = true
optional = true

[dependencies.tiny-keccak]
workspace = true
optional = true

[dependencies.sha3]
workspace = true
optional = true

[dependencies.rs_merkle]
workspace = true

[dev-dependencies.sha2]
version = "0.10"
default-features = false
features = []

[features]
default = ["generate", "verify", "tiny-keccak", "debug", "progress", "high-memory", "high-cpu"]
generate = []
verify = []
debug = []
progress = []
high-memory = []
high-cpu = []
tiny-keccak = ["dep:tiny-keccak"]
rust-crypto = ["dep:sha3"]
const-hash = ["dep:keccak-const"]
