[package]
name = "automation-mitigation-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.pow]
path = "../pow"
package = "automation-mitigation-pow"
default-features = false
features = ["generate", "tiny-keccak", "progress"]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
